src/main/java/com/example/mybookshopapp/errors/UserAlreadyExistException.java
package com.example.mybookshopapp.errors;

public class UserAlreadyExistException extends Throwable {
    public UserAlreadyExistException(String message) {
        super(message);
    }
}
